Fim do exercício 013 de Flexbox

--- a/modulo-4/exercicios/ex026/mq005/estilos/style.css
+++ b/modulo-4/exercicios/ex026/mq005/estilos/style.css
@@ -28,7 +28,7 @@ i#burger {
     cursor: pointer;
 }
 
-span#burger:hover {
+i#burger:hover {
     background-color: white;
     color: black;
     transition: 0.3s;
