--- a/modulo-5/exercicios/ex027/flex013-menu-flexbox/estilos/style.css
+++ b/modulo-5/exercicios/ex027/flex013-menu-flexbox/estilos/style.css
@@ -21,21 +21,43 @@ header {
 
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
+
     align-items: center;
+    justify-content: space-between;
 }
 
 header > h1 {
     border: 1px dotted black;
     flex: 0 0 200px;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.404);
+}
+
+i#burger {
+    width: 100vw;
+    background-color: rgb(48, 48, 48);
+    color: white;
+    justify-content: center;
+    padding: 10px;
+    display: flex;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+i#burger:hover {
+    background-color: white;
+    color: black;
+    border-radius: 4px;
+    transition: background-color 0.3s;
 }
 
 header > nav {
-    border: 1px dotted black;
+    border: 1px dotted black; 
+    width: 90vw;
+    margin: auto;
     
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-end;
+    display: none;
+    flex-flow: column wrap;
+    
 }
 
 header > nav > a {
@@ -58,8 +80,14 @@ header > nav > a:hover {
 
 main {
     background-color: white;
-    margin: 10px;
-    padding: 10px;
+
+    height: 100vh;
+    width: 700px;
+
     border-radius: 10px;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.336);
+    margin: 10px auto;
+    padding: 10px;
+
+    text-indent: 16px;
 }
